file(MAKE_DIRECTORY 
    ${PROJECT_BINARY_DIR}/${REL_PYPI_LAPKT_ROOT}
)

add_custom_target(copy_package
    COMMAND ${CMAKE_COMMAND} -E copy_directory 
    ${CMAKE_CURRENT_SOURCE_DIR}/_package
    ${PROJECT_BINARY_DIR}/${REL_PYPI_ROOT}/
)

add_dependencies(wrapper copy_package)

install(DIRECTORY
    ${PROJECT_BINARY_DIR}/${REL_PYPI_ROOT}/
    FILE_PERMISSIONS OWNER_WRITE OWNER_READ
    DESTINATION ${REL_PYPI_ROOT}
    COMPONENT PYPACKAGE EXCLUDE_FROM_ALL 
)

install(DIRECTORY
    ${PROJECT_BINARY_DIR}/${REL_PYPI_ROOT}
    FILE_PERMISSIONS OWNER_WRITE OWNER_READ
    DESTINATION ${CMAKE_SOURCE_DIR}/debug_install
    COMPONENT PYPACKAGE EXCLUDE_FROM_ALL 
)
install(FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/debug.py
    PERMISSIONS OWNER_WRITE OWNER_READ
    DESTINATION ${CMAKE_SOURCE_DIR}/debug_install
    COMPONENT PYPACKAGE EXCLUDE_FROM_ALL 
)
