
configure_file(${PROJECT_SOURCE_DIR}/src/script/lapkt.py
    ${PROJECT_BINARY_DIR}/${REL_PYPI_ROOT}/package/script/lapkt.py
    FILE_PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
    COPYONLY
)

configure_file(${PROJECT_SOURCE_DIR}/src/script/run_planner.py 
    ${PROJECT_BINARY_DIR}/${REL_PYPI_LAPKT_ROOT}/run_planner.py 
    FILE_PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
    COPYONLY
)

install(FILES
    ${PROJECT_BINARY_DIR}/${REL_PYPI_ROOT}/package/script/lapkt.py
    PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
    DESTINATION ${REL_PYPI_ROOT}/package/script
    COMPONENT PYPACKAGE EXCLUDE_FROM_ALL
)
install(FILES
    ${PROJECT_BINARY_DIR}/${REL_PYPI_LAPKT_ROOT}/run_planner.py 
    PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
    DESTINATION ${REL_PYPI_LAPKT_ROOT}
    COMPONENT PYPACKAGE EXCLUDE_FROM_ALL
)
