#
install(FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/lapkt
    PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
    DESTINATION ${CMAKE_INSTALL_PREFIX}
    COMPONENT Runtime
  )
install(FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/lapkt
    PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
    DESTINATION ${CMAKE_INSTALL_PREFIX}
    COMPONENT Development EXCLUDE_FROM_ALL
  )

#
if(CMAKE_VAL)
    install(FILES
        ${CMAKE_CURRENT_SOURCE_DIR}/validate.py
        PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
        DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
        COMPONENT Runtime
      )
    install(FILES
        ${CMAKE_CURRENT_SOURCE_DIR}/validate.py
        PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
        DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
        COMPONENT Development EXCLUDE_FROM_ALL
      )
endif(CMAKE_VAL)
